--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 
     <div class="modal" style="display: none">
       <div class="overlay"></div>
-      <div class="modal_content">
-        <button title="Close" class="close_modal">
-          <i class="fas fa-times"></i>
-        </button>
+      <div class="modal_content" id="modalContainer">
+        <h2>Are you sure you want to continue?</h2>
       </div>
     </div>
+    <div id="modalMsg"></div>
     <script type="module" src="./js/Dialog/index.js"></script>
 </body>
 </html>
