--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
     <div class="modal" style="display: none">
       <div class="overlay"></div>
-      <div class="modal_content" id="modalContainer">
+      <div class="modal_content">
         <h2>Are you sure you want to continue?</h2>
+        <div id="modalContainer"></div>
       </div>
     </div>
     <div id="modalMsg"></div>
